# WMS_MCP_Server

./: .env.example  .env.production  .env.staging  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  quality-gates.yml  release.yml
ansible/: deploy.yml  disaster-recovery.yml  monitoring.yml  test.yml
app/: config.py  server.py
app/advanced/: __init__.py  advanced_features.py  analytics.py  demand_forecasting.py  inventory_optimization.py  ml_integration.py  predictive_maintenance.py  tool_sdk.py  warehouse_layout.py
app/clients/: __init__.py  database_client.py  queue_client.py  redis_client.py
app/integration/: __init__.py  event_driven.py  external_apis.py  grpc_client.py  resilience.py  tool_composition.py
app/middleware/: __init__.py  authentication.py  data_protection.py  gdpr_compliance.py  jwt_auth.py  rate_limiting.py  security_alerts.py  security_dashboard.py  security_monitoring.py  service_auth.py
app/models/: __init__.py  common.py
app/performance/: __init__.py  async_optimization.py  caching.py  database_optimization.py  resource_management.py
app/tools/: __init__.py  (+2 more)
docs/: API_REFERENCE.md  ARCHITECTURE.md  CODE_STYLE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  ERROR_HANDLING.md  IMPLEMENTATION_PLAN.md  Modules.md  PERFORMANCE_GUIDELINES.md  RELEASE.md  SECURITY_CONSIDERATIONS.md  TESTING.md  TOOL_GUIDE.md
monitoring/: alerting_rules.yml  prometheus.yml
scripts/: health_check.sh  init-db.sql  run_tests.sh
terraform/: main.tf  variables.tf
tests/: conftest.py
(+66 files in other folders)
