[project]
name = "wms-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "mcp>=1.27.2",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "aio-pika>=9.0.0",
]

[dev-dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.1.0"
